--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -9,30 +9,44 @@ tasks:
     cmds:
       - task -t tasks/python.yml --list
 
+  init:
+    desc: Initialize project
+    silent: true
+    deps: []
+    generates:
+      - .venv/bin/activate
+    cmds:
+      - uv venv --allow-existing
+
   run:
     desc: Run the project
     silent: true
-    deps: []
+    deps:
+      - init
     cmds:
       - uv run arvo
 
   debug:
     desc: Run the project in debug mode
     silent: true
-    deps: []
+    deps:
+      - init
     cmds:
       - FLASK_DEBUG=1 uv run arvo
 
   test:
     desc: Test the project
     silent: false
-    deps: []
+    deps:
+      - init
     cmds:
       - uv run -- pytest
 
   check:
     desc: Check for linting/formatting errors
     silent: true
+    deps:
+      - init
     cmds:
       - ty check --error-on-warning .
       - ruff check .
@@ -41,6 +55,8 @@ tasks:
   fix:
     desc: Fix linting/formatting errors
     silent: true
+    deps:
+      - init
     cmds:
       - ruff check --fix .
       - ruff format .
