--- a/tasks/python.yml
+++ b/tasks/python.yml
@@ -17,6 +17,7 @@ tasks:
       - .venv/bin/activate
     cmds:
       - uv venv --allow-existing
+      - uv sync
 
   run:
     desc: Run the project
@@ -48,9 +49,9 @@ tasks:
     deps:
       - init
     cmds:
-      - ty check --error-on-warning .
-      - ruff check .
-      - ruff format --check .
+      - uv run ty check --error-on-warning .
+      - uv run ruff check .
+      - uv run ruff format --check .
 
   fix:
     desc: Fix linting/formatting errors
@@ -58,5 +59,5 @@ tasks:
     deps:
       - init
     cmds:
-      - ruff check --fix .
-      - ruff format .
+      - uv run ruff check --fix .
+      - uv run ruff format .
