--- a/.yamlfmt.yml
+++ b/.yamlfmt.yml
@@ -2,6 +2,7 @@
 exclude:
   - .venv/
   - .pre-commit-config.yaml
+  - frontend/node_modules/
 formatter:
   include_document_start: true
   retain_line_breaks_single: true
